--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,19 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^4.32.0",
+    "axios-mock-adapter": "^1.22.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vitest": "^1.5.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.25",
